--- a/appspec.yml
+++ b/appspec.yml
@@ -1,30 +1,18 @@
 version: 0.0
 os: linux
 files:
-  - source: /index.html
-    destination: /var/www/html/
+  - source: 'C:\Users\sai prasad\Downloads\sai CICD\code'
+    destination: /var/www/html
+permissions:
+  - object: /var/www/html
+    pattern: "**"
+    mode: "0755"
+    owner: root
+    group: root
+    type:
+      - file
+      - directory
 hooks:
-  ApplicationStop:
-    - location: scripts/stop_server.sh
-      timeout: 300
-      runas: root
-
-  AfterInstall:
-    - location: scripts/after_install.sh
-      timeout: 300
-      runas: root
-
-  BeforeInstall:
-    - location: scripts/install_dependencies.sh
-      timeout: 300
-      runas: root
-
-  ApplicationStart:
-    - location: scripts/start_server.sh
-      timeout: 300
-      runas: root
-
-  ValidateService:
-    - location: scripts/validate_service.sh
-      timeout: 300
-  
+ApplicationStart:
+  - location: deploy-scripts/application-start-hook.sh
+    timeout: 300
