--- a/appspec.yml
+++ b/appspec.yml
@@ -1,7 +1,7 @@
 version: 0.0
 os: linux
 files:
-  - source: 'C:\Users\sai prasad\Downloads\sai CICD\code'
+  - source: "/"
     destination: /var/www/html
 permissions:
   - object: /var/www/html
